LC-467: changed filter to append, added overlap by chunks
- Changed name of stage to ChunkText
- Moved ChunkingMethod to stage utils
- added sliding window logic as an additional overlap option
- instead of filtering chunks by length, append to neighboring chunks, with default set to the next chunk
- added tests for append chunk and overlap by chunks